--- a/POS2/POS2/POS2/POS.csproj
+++ b/POS2/POS2/POS2/POS.csproj
@@ -46,19 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ITaxCalculator.cs" />
+    <Compile Include="PriceDispaly.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PriceDispaly.Designer.cs">
+      <DependentUpon>PriceDispaly.cs</DependentUpon>
     </Compile>
     <Compile Include="IPriceDisplay.cs" />
-    <Compile Include="IProductLookup.cs" />
+    <Compile Include="IProductRepository.cs" />
     <Compile Include="IScanner.cs" />
-    <Compile Include="PriceDisplay.cs" />
     <Compile Include="PricePresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="PriceDispaly.resx">
+      <DependentUpon>PriceDispaly.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
